--- a/food.html
+++ b/food.html
@@ -30,20 +30,20 @@
 
             <ul class="nav navbar-nav">
 
+
                 <li><a href="about.html"><img class="icon" src="img/user-id-icon.png">About</a></li>
 
                 <li><a href="food.html"><img class="icon" src="img/tag-alt-icon.png">Food Photography</a></li>
 
                 <li><a href="portrait.html"><img class="icon" src="img/tag-icon.png">Portrait Photography</a></li>
 
-                <li><a href="lightpainting.html"><img class="icon" src="img/brick-icon.png">Light
+                <li><a href="lightpainting.html" target=""><img class="icon" src="img/brick-icon.png">Light
                         Painting</a></li>
 
                 <li><a href="mailto:sschroeder88@gmail.com?subject=lets%20talk&amp;body=Hello%20Sarah,&amp;"
                         target=""><img class="icon" src="img/handshake-icon.png">Contact</a></li>
 
             </ul>
-
 
         </nav>
     </div>
@@ -55,13 +55,11 @@
                 <ul class="nav" id="menu">
                     <li><a href=""> Sarah Irwin</a></li>
 
-                    <li><a href="about.html" target=""><img class="icon" src="img/user-id-icon.png"> About</a></li>
+                    <li><a href="about.html"><img class="icon" src="img/user-id-icon.png"> About</a></li>
 
-                    <li><a href="food.html" target=""><img class="icon" src="img/tag-alt-icon.png"> Food Photography</a>
-                    </li>
+                    <li><a href="food.html"><img class="icon" src="img/tag-alt-icon.png"> Food Photography</a></li>
 
-                    <li><a href="portrait.html" target=""><img class="icon" src="img/tag-icon.png"> Portrait
-                            Photography</a></li>
+                    <li><a href="portrait.html"><img class="icon" src="img/tag-icon.png"> Portrait Photography</a></li>
 
                     <li><a href="lightpainting.html" target=""><img class="icon" src="img/brick-icon.png"> Light
                             Painting</a></li>
@@ -76,12 +74,74 @@
 
     <div class="rMargin">
         <div id="page-content-wrapper">
-            <div id="content"><img class="profilePhoto pLeft"
-                    style="flex: 490 1 0%; margin-left: 0px; max-width: 768px; margin-top: 0px; margin-bottom: 0px; top: 0px; height: 768px; position: relative;"
-                    src="img/aboutme.jpg">
+            <div id="content">
+                <div class="pLeft">
 
 
-               
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/food/cinnnamonroll.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/food/cupcake04.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/food/DSC_7247-1.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/food/dumpsandstuff.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/food/pancakes.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/food/taco01.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/food/topdown_single.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/food/trifle.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/food/wine.jpg" class="pWidth">
+                    </div>
+
+
+                </div>
             </div>
         </div>
 
