--- a/lightpainting.html
+++ b/lightpainting.html
@@ -12,37 +12,37 @@
         integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <link href="styles/sidebar.css" rel="stylesheet">
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" type="application/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 
 </head>
 
 <body>
 
+    <!--<div id="headers"></div>-->
+    <!--<div id="wrapper">-->
+
     <div id="nav" class="largeOnly">
         <nav class="navbar navbar-default">
             <a class="navbar-brand" href="#">Sarah Irwin</a>
+            <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
 
             <ul class="nav navbar-nav">
 
-                <li><a href="about.html"><img class="icon" src="img/user-id-icon.png">About</a></li>
+
+                <li><a href="about.html" target=""><img class="icon" src="img/user-id-icon.png">About</a></li>
 
                 <li><a href="food.html"><img class="icon" src="img/tag-alt-icon.png">Food Photography</a></li>
 
                 <li><a href="portrait.html"><img class="icon" src="img/tag-icon.png">Portrait Photography</a></li>
 
-                <li><a href="lightpainting.html"><img class="icon" src="img/brick-icon.png">Light
+                <li><a href="lightpainting.html" target=""><img class="icon" src="img/brick-icon.png">Light
                         Painting</a></li>
 
                 <li><a href="mailto:sschroeder88@gmail.com?subject=lets%20talk&amp;body=Hello%20Sarah,&amp;"
                         target=""><img class="icon" src="img/handshake-icon.png">Contact</a></li>
 
             </ul>
+            <!--</div>-->
 
 
         </nav>
@@ -55,13 +55,12 @@
                 <ul class="nav" id="menu">
                     <li><a href=""> Sarah Irwin</a></li>
 
+
                     <li><a href="about.html" target=""><img class="icon" src="img/user-id-icon.png"> About</a></li>
 
-                    <li><a href="food.html" target=""><img class="icon" src="img/tag-alt-icon.png"> Food Photography</a>
-                    </li>
+                    <li><a href="food.html"><img class="icon" src="img/tag-alt-icon.png"> Food Photography</a></li>
 
-                    <li><a href="portrait.html" target=""><img class="icon" src="img/tag-icon.png"> Portrait
-                            Photography</a></li>
+                    <li><a href="portrait.html"><img class="icon" src="img/tag-icon.png"> Portrait Photography</a></li>
 
                     <li><a href="lightpainting.html" target=""><img class="icon" src="img/brick-icon.png"> Light
                             Painting</a></li>
@@ -76,16 +75,50 @@
 
     <div class="rMargin">
         <div id="page-content-wrapper">
-            <div id="content"><img class="profilePhoto pLeft"
-                    style="flex: 490 1 0%; margin-left: 0px; max-width: 768px; margin-top: 0px; margin-bottom: 0px; top: 0px; height: 768px; position: relative;"
-                    src="img/aboutme.jpg">
+            <div id="content">
+                <div class="pLeft">
 
 
-               
-            </div>
-        </div>
+                    <h2></h2>
+                    <div class="pLeft">
 
-    </div>
+                        <img src="img/lightpainting/DSC_5345.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/lightpainting/DSC_5397.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/lightpainting/DSC_5424.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/lightpainting/DSC_5457.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/lightpainting/DSC_5518.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/lightpainting/DSC_5609.jpg" class="pWidth">
+                    </div>
 
 
 </body>
