--- a/portrait.html
+++ b/portrait.html
@@ -20,9 +20,13 @@
 
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 
+    <script src="scripts/templates.js" type="application/javascript"></script>
+    <script src="scripts/index.js" type="application/javascript"></script>
+
 </head>
 
 <body>
+
 
     <div id="nav" class="largeOnly">
         <nav class="navbar navbar-default">
@@ -30,20 +34,20 @@
 
             <ul class="nav navbar-nav">
 
-                <li><a href="about.html"><img class="icon" src="img/user-id-icon.png">About</a></li>
+
+                <li><a href="about.html" target=""><img class="icon" src="img/user-id-icon.png">About</a></li>
 
                 <li><a href="food.html"><img class="icon" src="img/tag-alt-icon.png">Food Photography</a></li>
 
                 <li><a href="portrait.html"><img class="icon" src="img/tag-icon.png">Portrait Photography</a></li>
 
-                <li><a href="lightpainting.html"><img class="icon" src="img/brick-icon.png">Light
+                <li><a href="lightpainting.html" target=""><img class="icon" src="img/brick-icon.png">Light
                         Painting</a></li>
 
                 <li><a href="mailto:sschroeder88@gmail.com?subject=lets%20talk&amp;body=Hello%20Sarah,&amp;"
                         target=""><img class="icon" src="img/handshake-icon.png">Contact</a></li>
 
             </ul>
-
 
         </nav>
     </div>
@@ -54,6 +58,7 @@
             <div class="sidebar-offcanvas" id="sidebar">
                 <ul class="nav" id="menu">
                     <li><a href=""> Sarah Irwin</a></li>
+
 
                     <li><a href="about.html" target=""><img class="icon" src="img/user-id-icon.png"> About</a></li>
 
@@ -76,17 +81,78 @@
 
     <div class="rMargin">
         <div id="page-content-wrapper">
-            <div id="content"><img class="profilePhoto pLeft"
-                    style="flex: 490 1 0%; margin-left: 0px; max-width: 768px; margin-top: 0px; margin-bottom: 0px; top: 0px; height: 768px; position: relative;"
-                    src="img/aboutme.jpg">
+            <div id="content">
+                <div class="pLeft">
 
 
-               
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/portrait/Grad6.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/portrait/Grad4.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/portrait/DSC_9876.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/portrait/DSC_7597-1.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/portrait/DSC_4283.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/portrait/DSC_3024.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/portrait/DSC_2560.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/portrait/DSC_2258.jpg" class="pWidth">
+                    </div>
+
+
+                    <h2></h2>
+                    <div class="pLeft">
+
+                        <img src="img/portrait/03.jpg" class="pWidth">
+                    </div>
+
+
+                </div>
             </div>
         </div>
 
     </div>
-
 
 </body>
 
