--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
 
     <div class="rMargin">
         <div id="page-content-wrapper">
-            <div id="content"><img class="profilePhoto pLeft"
-                    style="flex: 490 1 0%; margin-left: 0px; max-width: 768px; margin-top: 0px; margin-bottom: 0px; top: 0px; height: 768px; position: relative;"
-                    src="img/aboutme.jpg">
+            <div id="content">Hello, World!
 
 
                
