--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Photon</a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Sarah Irwin Photography</a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -89,7 +89,7 @@
                   <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
                 </li>
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="http://www.instagram.com/artandaudacity" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
                 </li>
                 <li>
                   <a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
@@ -127,15 +127,6 @@
                   <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/img_3.jpg" alt="Image">
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="image-wrap">
-                <div class="image-info">
-                  <h2 class="mb-3">Architecture</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-                </div>
-                <img src="images/img_4.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
