--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">Portrait</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">Portraits</h2>
+                  <a href="portraits.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/img_2.jpg" alt="Image">
               </div>
@@ -123,8 +123,8 @@
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">People</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">Food</h2>
+                  <a href="food.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/img_3.jpg" alt="Image">
               </div>
@@ -141,19 +141,10 @@
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">Sports</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">Light Painting</h2>
+                  <a href="lightpainting.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/img_6.jpg" alt="Image">
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="image-wrap">
-                <div class="image-info">
-                  <h2 class="mb-3">Travel</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-                </div>
-                <img src="images/img_7.jpg" alt="Image">
               </div>
             </div>
         </div>
