--- a/contact.html
+++ b/contact.html
@@ -173,14 +173,14 @@
             </div>
             <div class="col-lg-3 ml-auto">
               <div class="mb-3 bg-white">
-                <p class="mb-0 font-weight-bold">Address</p>
-                <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
+                <p class="mb-0 font-weight-bold">Located in</p>
+                <p class="mb-4">Rochester, New York, USA</p>
 
                 <p class="mb-0 font-weight-bold">Phone</p>
                 <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
 
                 <p class="mb-0 font-weight-bold">Email Address</p>
-                <p class="mb-0"><a href="#">youremail@domain.com</a></p>
+                <p class="mb-0"><a href="#">sarahirwin721@gmail.com</a></p>
 
               </div>
               
