--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
 
           <div class="row">
             <div class="col-lg-8 mb-5">
-              <form action="#">
+              <form action="sarahirwin721@gmail.com">
                
 
                 <div class="row form-group">
