--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
 
           <div class="row">
             <div class="col-lg-8 mb-5">
-              <form action="mailto:sarahirwin721@gmail.com">
+              <form action="mailto:sarahirwin721@gmail.com" method="post" enctype="text/plain">
                
 
                 <div class="row form-group">
