got rid of crap

--- a/index.html
+++ b/index.html
@@ -60,16 +60,8 @@
                   <a href="single.html">Gallery</a>
                   <ul class="dropdown">
                     <li><a href="/food.html">Food</a></li>
-                    <li class="has-children">
-                      <a href="#">Portraits</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Senior Photos</a></li>
-                        <li><a href="#">Graduation</a></li>
-                        <li><a href="#">Families</a></li>
-                      </ul>
-                    </li>
+                    <li><a href="/portrait.html">Portraits</a></li>
                     <li><a href="/lightpainting.html">Lightpainting</a></li>
-                    <li><a href="#">Rochester</a></li>
                   </ul>
                 </li>
                 <li><a href="services.html">Services</a></li>
@@ -127,15 +119,6 @@
                   <a href="food.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/img_3.jpg" alt="Image">
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="image-wrap">
-                <div class="image-info">
-                  <h2 class="mb-3">Animals</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-                </div>
-                <img src="images/img_5.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
