--- a/index.html
+++ b/index.html
@@ -75,16 +75,10 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                  <a href="https://www.facebook.com/sarahirwin.photo/" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                 </li>
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                </li>
-                <li>
-                  <a href="http://www.instagram.com/artandaudacity" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                </li>
-                <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
+                  <a href="http://www.instagram.com/sarahirwin.photo" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
                 </li>
               </ul>
             </div>
