--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <h2 class="mb-3">Food</h2>
                   <a href="food.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_3.jpg" alt="Image">
+                <img src="/originals/food/06lemonade.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
