--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <h2 class="mb-3">Portraits</h2>
                   <a href="portraits.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_2.jpg" alt="Image">
+                <img src="/originals/portrait/DSC_7597-1.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
@@ -121,7 +121,9 @@
                   <h2 class="mb-3">Light Painting</h2>
                   <a href="lightpainting.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_6.jpg" alt="Image">
+                <img src="/originals/lightpainting/DSC_5345.jpg
+                Find file Copy path
+                " alt="Image">
               </div>
             </div>
         </div>
