--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
                   <h2 class="mb-3">Light Painting</h2>
                   <a href="lightpainting.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="/originals/lightpainting/DSC_5345.jpg
-                Find file Copy path
-                " alt="Image">
+                <img src="/originals/lightpainting/DSC_5345.jpg" alt="Image">
               </div>
             </div>
         </div>
