--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="image-wrap">
                 <div class="image-info">
                   <h2 class="mb-3">Portraits</h2>
-                  <a href="portraits.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <a href="portrait.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
                 <img src="/originals/portrait/DSC_7597-1.jpg" alt="Image">
               </div>
