--- a/contact.html
+++ b/contact.html
@@ -43,42 +43,30 @@
 
 
 
-    <header class="site-navbar py-3 border-bottom" role="banner">
+    <header class="site-navbar py-3" role="banner">
 
       <div class="container-fluid">
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Photon</a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Sarah Irwin Photography</a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li class="has-children">
                   <a href="single.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="#">Nature</a></li>
-                    <li><a href="#">Portrait</a></li>
-                    <li><a href="#">People</a></li>
-                    <li><a href="#">Architecture</a></li>
-                    <li><a href="#">Animals</a></li>
-                    <li><a href="#">Sports</a></li>
-                    <li><a href="#">Travel</a></li>
-                    <li class="has-children">
-                      <a href="#">Sub Menu</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Menu One</a></li>
-                        <li><a href="#">Menu Two</a></li>
-                        <li><a href="#">Menu Three</a></li>
-                      </ul>
-                    </li>
+                    <li><a href="/food.html">Food</a></li>
+                    <li><a href="/portrait.html">Portraits</a></li>
+                    <li><a href="/lightpainting.html">Lightpainting</a></li>
                   </ul>
                 </li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
-                <li class="active"><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
           </div>
@@ -87,16 +75,10 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                  <a href="https://www.facebook.com/sarahirwin.photo/" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                 </li>
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                </li>
-                <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                </li>
-                <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
+                  <a href="http://www.instagram.com/sarahirwin.photo" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
                 </li>
               </ul>
             </div>
@@ -109,6 +91,21 @@
       </div>
       
     </header>
+<div class="row mb-5 site-section">
+            <div class="col-12 ">
+              <h2 class="site-section-heading text-center">About Us</h2>
+            </div>
+          </div>
+
+          <div class="row mb-5">
+            <div class="col-md-7">
+              <img src="images/img_2.jpg" alt="Images" class="img-fluid">
+            </div>
+            <div class="col-md-4 ml-auto">
+              <h3>Our Mission</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus vel tenetur explicabo necessitatibus, ad soluta consectetur illo qui voluptatem. Quis soluta maiores eum. Iste modi voluptatum in repudiandae fugiat suscipit dolorum harum, porro voluptate quis? Alias repudiandae dicta doloremque voluptates soluta repellendus, unde laborum quo nam, ullam facere voluptatem similique.</p>
+            </div>
+          </div>
 
 
 
