--- a/services.html
+++ b/services.html
@@ -102,7 +102,7 @@
         <div class="col-md-7">
           <div class="row mb-5">
             <div class="col-12 ">
-              <h2 class="site-section-heading text-center">Our Services</h2>
+              <h2 class="site-section-heading text-center">Services</h2>
             </div>
           </div>
           <div class="row">
@@ -110,24 +110,24 @@
               <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                 <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
                 <h3 class="text-black h4">Portraits</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                <p><strong class="font-weight-bold text-primary">$29</strong></p>
+                <p>Headshots, senior portraits, photos for social media, and more.</p>
+                <p><strong class="font-weight-bold text-primary">$20/hr shooting & editing</strong></p>
               </div>
             </div>
             <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
               <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                 <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
                 <h3 class="text-black h4">Food</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                <p><strong class="font-weight-bold text-primary">$46</strong></p>
+                <p>On location or otherwise</p>
+                <p><strong class="font-weight-bold text-primary">$20/hr</strong></p>
               </div>
             </div>
             <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
               <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                 <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
                 <h3 class="text-black h4">Weddings</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                <p><strong class="font-weight-bold text-primary">$24</strong></p>
+                <p>Capturing one of your happiest days</p>
+                <p><strong class="font-weight-bold text-primary">$500 for a 8hr Day</strong></p>
               </div>
             </div>
 
@@ -135,24 +135,24 @@
               <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                 <span class="icon flaticon-frame display-3 text-primary mb-4 d-block"></span>
                 <h3 class="text-black h4">Etc.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                <p><strong class="font-weight-bold text-primary">$40</strong></p>
+                <p>Looking for something a bit out of the box? Lightpainting or something new?</p>
+                <p><strong class="font-weight-bold text-primary">$20/hr</strong></p>
               </div>
             </div>
             <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
               <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                 <span class="icon flaticon-eiffel-tower display-3 text-primary mb-4 d-block"></span>
                 <h3 class="text-black h4">Photo Editing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                <p><strong class="font-weight-bold text-primary">$35</strong></p>
+                <p>Tweaking images you took or restoring old photos</p>
+                <p><strong class="font-weight-bold text-primary">$20/hr</strong></p>
               </div>
             </div>
             <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
               <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                 <span class="icon flaticon-video-play display-3 text-primary mb-4 d-block"></span>
                 <h3 class="text-black h4">Video Editing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                <p><strong class="font-weight-bold text-primary">$15</strong></p>
+                <p>I'm quite the *pro* with Premiere</p>
+                <p><strong class="font-weight-bold text-primary">$15/hr</strong></p>
               </div>
             </div>
 
