--- a/about.html
+++ b/about.html
@@ -95,15 +95,13 @@
 
 
 <body>
-    <div class="rMargin">
-        <div id="page-content-wrapper">
-            <div id="content"><img class="profilePhoto pLeft"
+
+        <table>
+                <tr>
+                  <th><img class="profilePhoto pLeft"
                     style="flex: 490 1 0%; margin-left: 0px; max-width: 768px; margin-top: 0px; margin-bottom: 0px; top: 0px; height: 768px; position: relative;"
-                    src="img/aboutme.jpg">
-
-
-                <div class="pLeft">
-                    <h3>About Me:</h3>
+                    src="img/aboutme.jpg"></th>
+                  <th> <h3>About Me:</h3>
                     <div class="aboutMe">
                         My name is Sarah Irwin and I'm a photographer. I enjoy music, cooking vegan food, spending time
                         outdoors, and
@@ -119,15 +117,14 @@
 
                         Associates in Graphic Design from Monroe Community College
                     </div>
-
+<p></p>
                     <h3>Exibitions &amp; Publications</h3>
                     <span class="" style="padding-left: 100px">
-
                         <div>
                             <span>
                                 <h4 style="display: contents">Satiated</h4> - Dec 2018
                             </span>
-                        </div><br>
+                        </div>
 
                         <div>
                             <span>
@@ -195,18 +192,9 @@
                                 <h4 style="display: contents">Untitled</h4> - March 2017
                                 Group photo show, Edinboro
                             </span>
-                        </div><br>
-
-                    </span>
-
-
-                </div>
-
-            </div>
-        </div>
-
-    </div>
-
+                        </div></th>
+                </tr>
+              </table>
 
 </body>
 
