--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <h2 class="mb-3">Portraits</h2>
                   <a href="portrait.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="/originals/portrait/DSC_0514.jpg" alt="Image">
+                <img src="/originals/portrait/DSC_0514.jpg" alt="Graduate Photo">
               </div>
             </div>
             <div class="swiper-slide">
@@ -112,7 +112,7 @@
                   <h2 class="mb-3">Food</h2>
                   <a href="food.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="/originals/food/06lemonade.jpg" alt="Image">
+                <img src="/originals/food/06lemonade.jpg" alt="Lemonade Photo">
               </div>
             </div>
             <div class="swiper-slide">
@@ -121,7 +121,7 @@
                   <h2 class="mb-3">Light Painting</h2>
                   <a href="lightpainting.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="/originals/lightpainting/DSC_5345.jpg" alt="Image">
+                <img src="/originals/lightpainting/DSC_5345.jpg" alt="Light Painting">
               </div>
             </div>
         </div>
