--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <h2 class="mb-3">Portraits</h2>
                   <a href="portrait.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="/originals/portrait/DSC_0514.jpg" alt="Graduate Photo">
+                <img src="/originals/portrait/DSC_7597-1.jpg" alt="Musician Portrait">
               </div>
             </div>
             <div class="swiper-slide">
