--- a/portrait.html
+++ b/portrait.html
@@ -115,33 +115,34 @@
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/portrait/Grad4.jpg" data-sub-html="<h4>Grad</h4><p>.</p>">
           <a href="#"><img src="img/portrait/Grad4.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/portrait/DSC_0514.jpg" data-sub-html="<h4>Oreo Trifle</h4><p>.</p>">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/portrait/DSC_0514.jpg" data-sub-html="<h4>.</h4><p>.</p>">
           <a href="#"><img src="originals/portrait/DSC_0514.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_9876.jpg" data-sub-html="<h4>Oreo Trifle</h4><p>.</p>">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_9876.jpg" data-sub-html="<h4>.</h4><p>.</p>">
           <a href="#"><img src="img/portrait/DSC_9876.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/portrait/p1.jpg" data-sub-html="<h4>Edinboro Grad</h4><p>Class of 2018</p>">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/portrait/p1.jpg" data-sub-html="<h4>.</h4><p>.</p>">
           <a href="#"><img src="originals/portrait/p1.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_7597-1.jpg" data-sub-html="<h4>Cupcake</h4><p>.</p>">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_7597-1.jpg" data-sub-html="<h4>.</h4><p>.</p>">
           <a href="#"><img src="img/portrait/DSC_7597-1.jpg" alt="IMage" class="img-fluid"></a>
         </div>
         
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_3024.jpg" data-sub-html="<h4>Sugar Cookie Dough</h4><p>.</p>">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_3024.jpg" data-sub-html="<h4>S.</h4><p>.</p>">
           <a href="#"><img src="img/portrait/DSC_3024.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/03.jpg" data-sub-html="<h4>Cinnamon Roll</h4><p>Best when dripping with Frosting.</p>">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/03.jpg" data-sub-html="<h4>.</h4><p>.</p>">
           <a href="#"><img src="img/portrait/03.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_2258.jpg" data-sub-html="<h4>Party Time</h4><p>.</p>">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_2258.jpg" data-sub-html="<h4>.</h4><p>.</p>">
           <a href="#"><img src="img/portrait/DSC_2258.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_4283.jpg" data-sub-html="<h4>Charcoal Lemonade</h4><p>.</p>">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_4283.jpg" data-sub-html="<h4>.</h4><p>.</p>">
           <a href="#"><img src="img/portrait/DSC_4283.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_2560.jpg" data-sub-html="<h4>Cinnamon Roll</h4><p>Best when dripping with Frosting.</p>">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/portrait/DSC_2560.jpg" data-sub-html="<h4>.</h4><p>.</p>">
           <a href="#"><img src="img/portrait/DSC_2560.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
       </div>
     </div>
   </div>
