--- a/lightpainting.html
+++ b/lightpainting.html
@@ -57,7 +57,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li class="has-children">
-                  <a href="single.html">Gallery</a>
+                 Gallery
                   <ul class="dropdown">
                     <li><a href="/food.html">Food</a></li>
                     <li><a href="/portrait.html">Portraits</a></li>
