--- a/services.html
+++ b/services.html
@@ -111,22 +111,22 @@
                 <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
                 <h3 class="text-black h4">Portraits</h3>
                 <p>Headshots, senior portraits, photos for social media, and more.</p>
-                <p><strong class="font-weight-bold text-primary">Starting at $30/hr shooting & editing</strong></p>
+                <p><strong class="font-weight-bold text-primary">Starting at $30/hr shooting</strong></p>
               </div>
             </div>
             <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
               <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                 <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
                 <h3 class="text-black h4">Food</h3>
-                <p>On location or otherwise</p>
-                <p><strong class="font-weight-bold text-primary">$20/hr</strong></p>
+                <p>On location</p>
+                <p><strong class="font-weight-bold text-primary">Starting at $30/hr</strong></p>
               </div>
             </div>
             <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
               <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                 <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
                 <h3 class="text-black h4">Weddings</h3>
-                <p>Capturing one of your happiest days</p>
+                <p>In and Around Rochester, NY</p>
                 <p><strong class="font-weight-bold text-primary">Starting at $750 for a 4hr Day</strong></p>
               </div>
             </div>
