--- a/food.html
+++ b/food.html
@@ -132,7 +132,13 @@
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/food/cupcake04.jpg" data-sub-html="<h4>Party Time</h4><p>.</p>">
             <a href="#"><img src="img/food/cupcake04.jpg" alt="IMage" class="img-fluid"></a>
           </div>
-
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/food/cupcake07.jpg" data-sub-html="<h4>Party Time</h4><p>.</p>">
+            <a href="#"><img src="img/food/cupcake07.jpg" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/food/cupcake08.jpg" data-sub-html="<h4>Party Time</h4><p>.</p>">
+            <a href="#"><img src="img/food/cupcake08.jpg" alt="IMage" class="img-fluid"></a>
+          </div>
+          
         </div>
       </div>
     </div>
