--- a/food.html
+++ b/food.html
@@ -125,7 +125,12 @@
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/food/04acookiedough.jpg" data-sub-html="<h4>Sugar Cookie Dough</h4><p>.</p>">
             <a href="#"><img src="originals/food/04acookiedough.jpg" alt="IMage" class="img-fluid"></a>
           </div>
-  
+   <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/food/firstcopy.jpg" data-sub-html="<h4>Dumplings</h4><p>.</p>">
+            <a href="#"><img src="img/food/firstcopy.jpg" alt="IMage" class="img-fluid"></a>
+          </div>
+           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/food/dumpsandstuff.jpg" data-sub-html="<h4>Dumplings</h4><p>.</p>">
+            <a href="#"><img src="img/food/dumpsandstuff.jpg" alt="IMage" class="img-fluid"></a>
+          </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/food/cinnnamonroll.jpg" data-sub-html="<h4>Cinnamon Roll</h4><p>Best when dripping with Frosting.</p>">
             <a href="#"><img src="img/food/cinnnamonroll.jpg" alt="IMage" class="img-fluid"></a>
           </div>
@@ -138,7 +143,9 @@
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/food/cupcake08.jpg" data-sub-html="<h4>Party Time</h4><p>.</p>">
             <a href="#"><img src="img/food/cupcake08.jpg" alt="IMage" class="img-fluid"></a>
           </div>
-          
+           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/food/oatmeal.jpg" data-sub-html="<h4>Breakfast</h4><p>.</p>">
+            <a href="#"><img src="img/food/oatmeal.jpg" alt="IMage" class="img-fluid"></a>
+          </div>
         </div>
       </div>
     </div>
