--- a/services.html
+++ b/services.html
@@ -59,6 +59,7 @@
                 <li class="has-children">
                   Gallery
                   <ul class="dropdown">
+                    <li><a href="/weddings.html">Weddings</a></li>
                     <li><a href="/food.html">Food</a></li>
                     <li><a href="/portrait.html">Portraits</a></li>
                     <li><a href="/lightpainting.html">Lightpainting</a></li>
