--- a/index.html
+++ b/index.html
@@ -97,13 +97,22 @@
   <div class="container-fluid" data-aos="fade" data-aos-delay="500">
     <div class="swiper-container images-carousel">
         <div class="swiper-wrapper">
-            <div class="swiper-slide">
+<div class="swiper-slide">
+              <div class="image-wrap">
+                <div class="image-info">
+                  <h2 class="mb-3">Weddings</h2>
+                  <a href="weddings.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                </div>
+                <img src="/originals/portrait/DSC_7597-1.jpg" alt="Wedding Photo">
+              </div>
+            </div>
+          <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
                   <h2 class="mb-3">Portraits</h2>
                   <a href="portrait.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="/originals/portrait/DSC_7597-1.jpg" alt="Musician Portrait">
+                <img src="/originals/Weddings/under the arch (4 of 5).jpg" alt="Musician Portrait">
               </div>
             </div>
             <div class="swiper-slide">
