--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <h2 class="mb-3">Weddings</h2>
                   <a href="weddings.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="/originals/portrait/DSC_7597-1.jpg" alt="Wedding Photo">
+                <img src="/originals/Weddings/js1.jpg" alt="Wedding Photo">
               </div>
             </div>
           <div class="swiper-slide">
@@ -112,7 +112,7 @@
                   <h2 class="mb-3">Portraits</h2>
                   <a href="portrait.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="/originals/Weddings/under the arch (4 of 5).jpg" alt="Musician Portrait">
+                <img src="/originals/portrait/DSC_7597-1.jpg" alt="Musician Portrait">
               </div>
             </div>
             <div class="swiper-slide">
