--- a/weddings.html
+++ b/weddings.html
@@ -108,28 +108,10 @@
   
     </div>
     <div class="row" id="lightgallery">
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/lightpainting/DSC_5345.jpg" data-sub-html="<h4>.</h4><p>.</p>">
-        <a href="#"><img src="img/lightpainting/DSC_5345.jpg" alt="IMage" class="img-fluid"></a>
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/Weddings/js1.jpg data-sub-html="<h4>.</h4><p>.</p>">
+        <a href="#"><img src="/originals/Weddings/js1.jpg" alt="IMage" class="img-fluid"></a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/lightpainting/DSC_5397.jpg" data-sub-html="<h4>.</h4><p>.</p>">
-        <a href="#"><img src="img/lightpainting/DSC_5397.jpg" alt="IMage" class="img-fluid"></a>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/lightpainting/DSC_5424.jpg" data-sub-html="<h4>.</h4><p>.</p>">
-        <a href="#"><img src="img/lightpainting/DSC_5424.jpg" alt="IMage" class="img-fluid"></a>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/lightpainting/DSC_5457.jpg" data-sub-html="<h4>.</h4><p>.</p>">
-        <a href="#"><img src="img/lightpainting/DSC_5457.jpg" alt="IMage" class="img-fluid"></a>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/lightpainting/DSC_5518.jpg" data-sub-html="<h4>.</h4><p>.</p>">
-        <a href="#"><img src="img/lightpainting/DSC_5518.jpg" alt="IMage" class="img-fluid"></a>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/lightpainting/DSC_5609.jpg" data-sub-html="<h4>.</h4><p>.</p>">
-        <a href="#"><img src="img/lightpainting/DSC_5609.jpg" alt="IMage" class="img-fluid"></a>
-      </div>
-
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="sarah_schroeder_lit.jpg" data-sub-html="<h4>.</h4><p>.</p>">
-        <a href="#"><img src="sarah_schroeder_lit.jpg" alt="IMage" class="img-fluid"></a>
-      </div>
+      
 
     </div>
   </div>
