--- a/weddings.html
+++ b/weddings.html
@@ -108,8 +108,11 @@
   
     </div>
     <div class="row" id="lightgallery">
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="originals/Weddings/js1.jpg data-sub-html="<h4>.</h4><p>.</p>">
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/js1.jpg" data-sub-html="<h4>.</h4><p>.</p>">
         <a href="#"><img src="/originals/Weddings/js1.jpg" alt="IMage" class="img-fluid"></a>
+      </div>
+  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/ceremony_01.jpg" data-sub-html="<h4>.</h4><p>.</p>">
+        <a href="#"><img src="/originals/Weddings/ceremony_01.jpg" alt="IMage" class="img-fluid"></a>
       </div>
       
 
