--- a/weddings.html
+++ b/weddings.html
@@ -101,7 +101,7 @@
       <div class="col-md-7">
         <div class="row mb-5">
           <div class="col-12 ">
-            <h2 class="site-section-heading text-center">Light Painting Gallery</h2>
+            <h2 class="site-section-heading text-center">Wedding Gallery</h2>
           </div>
         </div>
       </div>
@@ -114,8 +114,12 @@
   <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/ceremony_01.jpg" data-sub-html="<h4>.</h4><p>.</p>">
         <a href="#"><img src="/originals/Weddings/ceremony_01.jpg" alt="IMage" class="img-fluid"></a>
       </div>
-      
-
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/posed-12.jpg" data-sub-html="<h4>.</h4><p>.</p>">
+        <a href="#"><img src="/originals/Weddings/posed-12.jpg" alt="IMage" class="img-fluid"></a>
+      </div>
+  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/posed-9.jpg" data-sub-html="<h4>.</h4><p>.</p>">
+        <a href="#"><img src="/originals/Weddings/posed-9.jpg" alt="IMage" class="img-fluid"></a>
+      </div>
     </div>
   </div>
 </div>
