--- a/weddings.html
+++ b/weddings.html
@@ -120,6 +120,15 @@
   <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/posed-9.jpg" data-sub-html="<h4>.</h4><p>.</p>">
         <a href="#"><img src="/originals/Weddings/posed-9.jpg" alt="IMage" class="img-fluid"></a>
       </div>
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/reservoir-40.jpg" data-sub-html="<h4>.</h4><p>.</p>">
+        <a href="#"><img src="/originals/Weddings/reservoir-40.jpg" alt="IMage" class="img-fluid"></a>
+      </div>
+       <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/sunkengarden-13.jpg" data-sub-html="<h4>.</h4><p>.</p>">
+        <a href="#"><img src="/originals/Weddings/sunkengarden-13.jpg" alt="IMage" class="img-fluid"></a>
+      </div>
+<div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/sunkengarden-14.jpg" data-sub-html="<h4>.</h4><p>.</p>">
+        <a href="#"><img src="/originals/Weddings/sunkengarden-14.jpg" alt="IMage" class="img-fluid"></a>
+      </div>      
     </div>
   </div>
 </div>
