--- a/weddings.html
+++ b/weddings.html
@@ -130,6 +130,12 @@
 <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/sunkengarden-14.jpg" data-sub-html="<h4>.</h4><p>.</p>">
         <a href="#"><img src="/originals/Weddings/sunkengarden-14.jpg" alt="IMage" class="img-fluid"></a>
       </div>      
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/df5fe64941dfd186b08bfa54_rw_3840.jpg" data-sub-html="<h4>.</h4><p>.</p>">
+        <a href="#"><img src="/originals/Weddings/df5fe64941dfd186b08bfa54_rw_3840.jpg" alt="IMage" class="img-fluid"></a>
+      </div>  
+       <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="/originals/Weddings/DSC_4219.jpg" data-sub-html="<h4>.</h4><p>.</p>">
+        <a href="#"><img src="/originals/Weddings/DSC_4219.jpg" alt="IMage" class="img-fluid"></a>
+      </div>  
     </div>
   </div>
 </div>
