--- a/lightpainting.html
+++ b/lightpainting.html
@@ -127,8 +127,8 @@
         <a href="#"><img src="img/lightpainting/DSC_5609.jpg" alt="IMage" class="img-fluid"></a>
       </div>
 
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="sarah_schroeder_lit.jpg" data-sub-html="<h4>.</h4><p>.</p>">
-        <a href="#"><img src="sarah_schroeder_lit.jpg" alt="IMage" class="img-fluid"></a>
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="img/lightpainting/sarah_schroeder_lit.jpg" data-sub-html="<h4>.</h4><p>.</p>">
+        <a href="#"><img src="img/lightpainting/sarah_schroeder_lit.jpg" alt="IMage" class="img-fluid"></a>
       </div>
 
     </div>
