--- a/services.html
+++ b/services.html
@@ -128,7 +128,7 @@
                 <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
                 <h3 class="text-black h4">Weddings</h3>
                 <p>In and Around Rochester, NY</p>
-                <p><strong class="font-weight-bold text-primary">Starting at $750 for a 4hr Day</strong></p>
+                <p><strong class="font-weight-bold text-primary">Starting at $125 per hour of shooting</strong></p>
               </div>
             </div>
 
